examples/httpbin/httpbin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
spec:
  type: NodePort
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 9991
      targetPort: 80
      nodePort: 30000
